<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.grupp8DAT255.studiekoll.DataDeletionActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/entry_deletion_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/entry_deletion_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />
    
    <Spinner
        android:id="@+id/entry_deletion_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/entry_deletion_text_view"
        android:prompt="@string/entry_deletion_spinner_prompt"
        android:spinnerMode="dialog" />
    
    <Button
        android:id="@+id/entry_deletion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entry_deletion_spinner"
        android:text="@string/entry_deletion_button_text" />
    
    <TextView
        android:id="@+id/category_deletion_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/category_deletion_spinner"
        android:text="@string/category_deletion_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />
    
    <Spinner
        android:id="@+id/category_deletion_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/category_deletion_button"
        android:prompt="@string/category_deletion_spinner_prompt"
        android:spinnerMode="dialog" />

	<Button
        android:id="@+id/category_deletion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/category_deletion_button_text" />

</RelativeLayout>