<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.grupp8DAT255.studiekoll.GraphActivity$PlaceholderFragment" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/message"
        android:textStyle="bold" 
        android:gravity="center_horizontal" />
	
    <!-- The category and hours layout -->
	<ScrollView 
		android:layout_width="fill_parent"
    	android:layout_height="0dp"
        android:layout_weight="5" >	    
	    
		<TableLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" >

			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >
		  	    
				<TextView
				    android:text="@string/title_category_text"
				    android:textStyle="bold"
					android:layout_weight="1" />
							    
				<TextView
				    android:text="@string/title_total_hours_text"
				    android:textStyle="bold"
					android:layout_weight="1" />

			</TableRow>
		
			<TableRow
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >
	
				<TextView
	        		android:id="@+id/db_category_info"
					android:layout_weight="1" />
				
	    		<TextView
	        		android:id="@+id/db_hours_info"
					android:layout_weight="1" />
				
	    	</TableRow>		
					
		</TableLayout>
		 
    </ScrollView> <!-- Hours and category layout ends -->
    
    
    <!-- Bottom control layout -->
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal" >
    
        <!-- Date control layout -->
        <LinearLayout 
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="vertical" 
        	>
        
            <!-- From date control layout -->
        	<LinearLayout 
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:orientation="horizontal" >        
        
        		<TextView
        		    android:layout_width="wrap_content"
        		    android:layout_height="wrap_content"
        		    android:text="@string/from_prompt" />
        
    			<Spinner
    			    android:id="@+id/from_year_spinner"
    			    android:layout_width="wrap_content"
    			    android:layout_height="wrap_content"
    			    android:prompt="@string/year_prompt"
    			    android:spinnerMode="dialog" />

				<Spinner
				    android:id="@+id/from_study_period_spinner"
				    android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:prompt="@string/study_period_prompt"
    			    android:spinnerMode="dialog" />

				<Spinner
		    		android:id="@+id/from_study_week_spinner"
		    		android:layout_width="wrap_content"
	    			android:layout_height="wrap_content" 
	    			android:prompt="@string/study_week_prompt"
    			    android:spinnerMode="dialog" />

			</LinearLayout> <!-- From date control layout end -->

			<!-- To date control layout -->
			<LinearLayout 
	   			android:layout_width="wrap_content"
       			android:layout_height="wrap_content"
       			android:orientation="horizontal" >

	   			<TextView
	   			    android:layout_width="wrap_content"
	   			    android:layout_height="wrap_content"
	   			    android:layout_marginRight="10dp"
	   			    android:text="@string/to_prompt" />

				<Spinner
			    	android:id="@+id/to_year_spinner"
			    	android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:prompt="@string/year_prompt"
    			    android:spinnerMode="dialog" />

				<Spinner
				   	android:id="@+id/to_study_period_spinner"
		    		android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:prompt="@string/study_period_prompt"
    			    android:spinnerMode="dialog" />

				<Spinner
			    	android:id="@+id/to_study_week_spinner"
					android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:prompt="@string/study_week_prompt"
    			    android:spinnerMode="dialog" />

			</LinearLayout> <!-- To date control layout end -->

		</LinearLayout> <!-- Date control layout end-->

		    <Button 
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/show_button_text"
	        	android:layout_gravity="center_horizontal|center_vertical"
	        	android:onClick="showGraph" />

	</LinearLayout> <!-- Bottom control layout end --> 
    
</LinearLayout>