<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.grupp8DAT255.studiekoll.MainActivity$PlaceholderFragment" >

	<Button
	    android:id="@+id/graphics_button"
	    android:layout_width="280dp"
	    android:layout_height="wrap_content"
	    android:text="@string/button_graphics"
	    android:onClick="createGraphActivity" />

	<Button
	    android:id="@+id/input_button"
	    android:layout_width="280dp"
	    android:layout_height="wrap_content"
	    android:text="@string/button_input"
	    android:onClick="createInputActivity" />

	<Button
	    android:id="@+id/help_button"
	    android:layout_width="280dp"
	    android:layout_height="wrap_content"
	    android:text="@string/button_help"
	    android:onClick="createHelpActivity" />

</LinearLayout>
