<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.grupp8DAT255.studiekoll.HelpActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/help_prompt"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_horizontal" />

    <ScrollView 
        android:layout_width="fill_parent"
    	android:layout_height="0dp"
        android:layout_weight="4" >	

    	<TextView
    	    android:id="@+id/help_text_view"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/help_text"
    	    android:textAppearance="?android:attr/textAppearanceMedium" />
        	    
    </ScrollView>
    
     <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/ok_button_text" 
        android:onClick="backToMain"
        android:layout_gravity="center_vertical|center_horizontal"/>

</LinearLayout>